[package]
name = "tuma-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "aptos-indexer-processor-sdk-v2.1.0" }
async-trait = "0.1.88"
chrono = {version = "0.4.41", features = ["clock", "serde"]}
clap = {version = "4.5.39", features = ["derive", "unstable-styles"]}
jemallocator = "0.5.4"
num_cpus = "1.17.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive", "rc"]}
serde_json = {version = "1.0.140", features = ["preserve_order"]}
strum = {version= "0.27.1", features = ["derive"]}
strum_macros = "0.27.1"
tokio = {version = "1.45.1", features = ["full"]}
tracing = "0.1.41"
url = {version = "2.5.4", features = ["serde"]}
diesel = { version = "2.2.0", features = ["postgres", "serde_json", "chrono", "r2d2", "numeric", "uuid"] }
dotenvy = "0.15"
shellexpand = "3.1.1"
bigdecimal = {version =  "0.4.8", features = ["serde"] }
redis = {version = "0.32.0", features = ["aio", "connection-manager", "tokio-comp"]}
deadpool-redis = "0.21.1"
tuma = { package = "tuma", git = "https://github.com/cradle-labs/tuma_rust_integrator.git"}
uuid = { version = "1.18.1", features = ["v4", "serde"] }